src/objects/Documento__c.object
<CustomObject>
    <fields>
        <fullName>CIFIN_en_carpeta_virtual__c</fullName>
        <label>CIFIN en carpeta virtual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carta_de_cliente_con_FRECH__c</fullName>
        <label>Carta de cliente con FRECH</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carta_laboral_con_especificaciones__c</fullName>
        <label>Carta laboral con especificaciones</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificado_de_camara_de_comercio__c</fullName>
        <label>Certificado de camara de comercio</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificado_de_otros_ingresos__c</fullName>
        <label>Certificado de otros ingresos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificado_ingresos_y_retenciones__c</fullName>
        <label>Certificado ingresos y retenciones</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificado_tradici_n_y_libertad__c</fullName>
        <label>Certificado tradición y libertad</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificado_vinculaci_n_a_empresa_transp__c</fullName>
        <label>Certificado vinculación a empresa transp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cliente_con_visita__c</fullName>
        <label>¿Cliente con visita?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comprobante_pago_pensi_n_ltimos_2_meses__c</fullName>
        <label>Comprobante pago pensión últimos 2 meses</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comprobantes_de_nomina_ltimos_2_meses__c</fullName>
        <label>Comprobantes de nomina últimos 2 meses</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contratos_de_arrendamientos__c</fullName>
        <label>Contratos de arrendamientos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuales__c</fullName>
        <label>Cuales?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_en_carpeta_virtual__c</fullName>
        <label>Data en carpeta virtual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaraci_n_renta_o_carta_no_declarante__c</fullName>
        <label>Declaración renta o carta no declarante</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digitalizado_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digitalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digitalizado_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digitalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digitalizado_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digitalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documento_afiliac_caja_de_compensaci_n__c</fullName>
        <label>Documento afiliac. caja de compensación</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documento_afiliaci_n_al_SGSS_salud_pensi__c</fullName>
        <label>Documento afiliación al SGSS salud/pensi</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documento_de_afiliaci_n_ARP__c</fullName>
        <label>Documento de afiliación ARP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estados_financieros_2_ltimos_a_os__c</fullName>
        <label>Estados financieros 2 últimos años</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extracto_bancario_factura_inscripci_n_TV__c</fullName>
        <label>Extracto bancario/factura inscripción TV</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extractos_bancarios_ltimos_tres_meses__c</fullName>
        <label>Extractos bancarios (últimos tres meses)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>&quot;En cada uno de los campos que se indica el documento se debe diligenciar la cantidad de hojas que se entrega al área de operaciones de CF&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formato_de_solicitud_MI_CASA_YA__c</fullName>
        <label>Formato de solicitud MI CASA YA</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formato_de_vinculaci_n_diligenciado__c</fullName>
        <label>Formato de vinculación diligenciado</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fotocopia_c_dula_ampliada_al_150__c</fullName>
        <label>Fotocopia cédula ampliada al 150%</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fotocopia_tarjeta_de_propiedad_vehiculo__c</fullName>
        <label>Fotocopia tarjeta de propiedad vehiculo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historia_laboral_de_fondo_de_pensiones__c</fullName>
        <label>Historia laboral de fondo de pensiones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Otros_documentos__c</fullName>
        <label>Otros documentos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paz_y_salvo_de_moras_embargos__c</fullName>
        <label>Paz y salvo de moras/embargos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recibo_de_pago_de_visita_a_independiente__c</fullName>
        <label>Recibo de pago de visita a independiente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referencias_de_proveedores__c</fullName>
        <label>Referencias de proveedores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registro_nico_tributario__c</fullName>
        <label>Registro único tributario</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solicitud_con_FRECH__c</fullName>
        <label>¿Solicitud con FRECH?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Documentos</relationshipLabel>
        <relationshipName>Documentos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Verificaci_n_documental_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacin_documental_8__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental_13__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>